--- a/Dicee+Challenge/dicee.html
+++ b/Dicee+Challenge/dicee.html
@@ -1,33 +1,31 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Dicee</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
-
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster"
+      rel="stylesheet"
+    />
   </head>
   <body>
-
     <div class="container">
       <h1>Refresh Me</h1>
-
+      <!-- src속성에 사진 주소를 입력해서 사진입력 가능-->
       <div class="dice">
         <p>Player 1</p>
-        <img class="img1" src="">
+        <img class="img1" src="" />
       </div>
 
       <div class="dice">
         <p>Player 2</p>
-        <img class="img2" src="">
+        <img class="img2" src="" />
       </div>
-
     </div>
-
-    
+    <!-- 스크립트로 사진 넣기 -->
+    <script src="script.js"></script>
   </body>
 
-  <footer>
-      &copy; 2020 . busanIT. co. kr 
-  </footer>
+  <footer>&copy; 2020 . busanIT. co. kr</footer>
 </html>
