--- a/Background/index.html
+++ b/Background/index.html
@@ -8,8 +8,10 @@
   </head>
   <body id="gradient">
     <h1>백그라운드 생성기</h1>
-    <input type="color" class="color1" value="#0000FF" />
-    <input type="color" class="color2" value="#0000FF" />
+    <div>
+      <input type="color" class="color1" value="#0000FF" />
+      <input type="color" class="color2" value="#0000FF" />
+    </div>
     <h2>현재 백그라운드 CSS</h2>
     <h3></h3>
     <!-- <button>제목변경버튼</button> -->
