--- a/사이드슬라이딩/index.html
+++ b/사이드슬라이딩/index.html
@@ -2,8 +2,9 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- 아래의 뷰포트는 미디어쿼리 사용 또는 vw, vh를 사용하기 위해 필요함 -->
     <!--viewport : 화면크기에 따라서 반응형으로 만들때 사용되는 것  -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
 
     <title>내 프로젝트</title>
@@ -13,7 +14,7 @@
     <div class="container">
       <!-- 스타일 속성은 자주 쓰지는 않지만 여러 이미지를 넣을 경우 편함 -->
       <div
-        class="panel active"
+        class="panel"
         style="
           background-image: url('https://cdn.pixabay.com/photo/2017/07/25/01/22/cat-2536662__340.jpg');
         "
@@ -21,7 +22,7 @@
         <h3>고양이</h3>
       </div>
       <div
-        class="panel"
+        class="panel active"
         style="
           background-image: url('https://cdn.pixabay.com/photo/2017/07/24/19/57/tiger-2535888__340.jpg');
         "
