--- a/movie-App/index.html
+++ b/movie-App/index.html
@@ -8,6 +8,67 @@
     <title>내 프로젝트</title>
   </head>
   <body>
+    <header>
+      <!-- form 태그는 액션이 있는데 서버로 보낼게 아니라서 생략 -->
+      <form id="form">
+        <input type="text" id="search" class="search" placeholder="영화검색" />
+      </form>
+    </header>
+
+    <main id="main">
+      <!-- 틀을 잡기 위한 하드코딩 삭제 -->
+      <!-- <div class="movie">
+        <img
+          src="https://images.unsplash.com/photo-1635805737707-575885ab0820?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NDZ8fG1vdmllfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
+          alt=""
+        />
+        <div class="movie-info">
+          <h3>영화제목</h3>
+          <span class="green">9.8</span>
+        </div>
+        <div class="overview">
+          <h3>상세보기</h3>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro
+          recusandae aspernatur facilis blanditiis labore, dicta sequi error.
+          Illum amet reprehenderit odio accusantium corporis recusandae
+          asperiores, dolorum tempora molestiae harum laboriosam.
+        </div>
+      </div>
+      <div class="movie">
+        <img
+          src="https://images.unsplash.com/photo-1635805737707-575885ab0820?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NDZ8fG1vdmllfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
+          alt=""
+        />
+        <div class="movie-info">
+          <h3>영화제목</h3>
+          <span class="green">9.8</span>
+        </div>
+        <div class="overview">
+          <h3>상세보기</h3>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro
+          recusandae aspernatur facilis blanditiis labore, dicta sequi error.
+          Illum amet reprehenderit odio accusantium corporis recusandae
+          asperiores, dolorum tempora molestiae harum laboriosam.
+        </div>
+      </div>
+      <div class="movie">
+        <img
+          src="https://images.unsplash.com/photo-1635805737707-575885ab0820?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NDZ8fG1vdmllfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
+          alt=""
+        />
+        <div class="movie-info">
+          <h3>영화제목</h3>
+          <span class="green">9.8</span>
+        </div>
+        <div class="overview">
+          <h3>상세보기</h3>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro
+          recusandae aspernatur facilis blanditiis labore, dicta sequi error.
+          Illum amet reprehenderit odio accusantium corporis recusandae
+          asperiores, dolorum tempora molestiae harum laboriosam.
+        </div>
+      </div> -->
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
